--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="referrer" content="never" />
     <title>Signin Template for Bootstrap</title>
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
@@ -14,7 +15,7 @@
 
 <body class="text-center">
 <form class="form-signin" th:action="@{/login}">
-    <img class="mb-4" th:src="@{/img/bootstrap-solid.svg}" alt="" width="72" height="72">
+    <img class="mb-4" th:src="@{/img/logo.png}" alt="" width="89" height="91">
     <h1 class="h3 mb-3 font-weight-normal" th:text="#{login.tip}"></h1>
     <p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
     <label class="sr-only" th:text="#{login.username}"></label>
@@ -27,7 +28,7 @@
         </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">[[#{login.btn}]]</button>
-    <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+    <p class="mt-5 mb-3 text-muted">© 2020-2021</p>
     <a class="btn btn-sm" th:href="@{/index(l='zh_CN')}">中文</a>
     <a class="btn btn-sm" th:href="@{/index(l='en_US')}">English</a>
 </form>
