thymeleaf和jsp成功共存

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- saved from url=(0052)http://getbootstrap.com/docs/4.0/examples/dashboard/ -->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Dashboard Template for Bootstrap</title>
+
+
 </head>
+
 <body>
-    <h1>主页</h1>
-    <img class="mb-4" src="/img/logo.png" alt="" width="89" height="91">
+
+<h1>首页</h1>
 </body>
+
 </html>
